# StudyInNSU

./: .gitignore
CN/Lab01/: quotes.txt
OS/: .gitignore
OS/Task10/: CMakeLists.txt  main.c
OS/Task11/: CMakeLists.txt  main.c
OS/Task16/: CMakeLists.txt  main.c
OS/Task18/: CMakeLists.txt  main.c
OS/Task19/: CMakeLists.txt  main.c
OS/Task2/: main.c
OS/Task21/: CMakeLists.txt  main.c
OS/Task22/: CMakeLists.txt  main  main.c
OS/Task25/: CMakeLists.txt  main  main.c
OS/Task26/: CMakeLists.txt  main.c
OS/Task27/: CMakeLists.txt  main.c
OS/Task28/: CMakeLists.txt  main.c  main28.c
OS/Task3/: UID  main.c  testFile
OS/Task30/: CMakeLists.txt  Message.h  recive  recive.c  send  send.c
OS/Task31/: CMakeLists.txt  Message.h  recive  recive.c  send  send.c
OS/Task32/: CMakeLists.txt  Message.h  master  master.c  send  send.c
OS/Task34.1/: CMakeLists.txt  cunsumer.c  producer.c
OS/Task4/: CMakeLists.txt  main.c  main.c~
OS/Task5/: files  inputFile  main.c  main.c~
OS/Task6/: main.c  select-poll
OS/Task7/: CMakeLists.txt  inputFile  main.c  mmap.txt
OS/Task8/: CMakeLists.txt  main.c  testFile.txt
OS/Task9/: CMakeLists.txt  main.c  output.txt
OS/forTask11/: CMakeLists.txt  main  main.c
OS_PosixThread/Lab1/: main.cpp  threads.txt
OS_PosixThread/Lab12/: CMakeLists.txt  main.cpp
OS_PosixThread/MultithreadProxy/: CMakeLists.txt  CacheBucket.cpp  CacheBucket.h  CacheStorage.cpp  CacheStorage.h  ClientConnection.cpp  ClientConnection.h  Proxy.cpp  Proxy.h  ServerConnection.cpp  ServerConnection.h  ThreadsBodies.cpp  ThreadsBodies.h
(+145 files in other folders)
